--- a/artistree/client/src/index.css
+++ b/artistree/client/src/index.css
@@ -31,4 +31,27 @@
   font-size: 3vh;
   text-decoration: none;
 }
+
+.searchForm {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 3em;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.searchForm button {
+  margin-left: 2em;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+:root {
+  font-family: Helvetica, Arial, sans-serif;
+}
 /*# sourceMappingURL=index.css.map */
