--- a/artistree/client/src/index.scss
+++ b/artistree/client/src/index.scss
@@ -1,1 +1,6 @@
 @import "./components/Nav/_Nav.scss";
+@import "./components/SearchResults/_SearchResults.scss";
+
+:root {
+  font-family: Helvetica, Arial, sans-serif;
+}
