--- a/artistree/client/src/index.scss
+++ b/artistree/client/src/index.scss
@@ -1,5 +1,11 @@
+@import "./components/Artwork/_Artwork.scss";
+@import "./components/DateAdder/_DateAdder.scss";
+@import "./components/HomePage/_HomePage.scss";
+@import "./components/Login/_Login.scss";
 @import "./components/Nav/_Nav.scss";
+@import "./components/Profile/_Profile.scss";
 @import "./components/SearchResults/_SearchResults.scss";
+@import "./components/Signup/_Signup.scss";
 
 :root {
   font-family: Helvetica, Arial, sans-serif;
