date setting is fixed

--- a/artistree/client/src/index.scss
+++ b/artistree/client/src/index.scss
@@ -1,4 +1,5 @@
 @import "./components/Artwork/_Artwork.scss";
+@import "./components/Availabilities/_Availabilities.scss";
 @import "./components/DateAdder/_DateAdder.scss";
 @import "./components/HomePage/_HomePage.scss";
 @import "./components/Login/_Login.scss";
