--- a/artistree/client/src/index.scss
+++ b/artistree/client/src/index.scss
@@ -7,6 +7,7 @@
 @import "./components/Profile/_Profile.scss";
 @import "./components/SearchResults/_SearchResults.scss";
 @import "./components/Signup/_Signup.scss";
+@import "./components/MessagesPage/Messages.scss";
 
 :root {
   font-family: Helvetica, Arial, sans-serif;
