--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,23 +32,11 @@
   text-decoration: none;
 }
 
-.searchForm {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-top: 3em;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.searchForm button {
-  margin-left: 2em;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+.message-profile-pic {
+  background-size: cover;
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
 }
 
 :root {
