--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,13 +1,13 @@
-@import "./components/Artwork/_Artwork.scss";
-@import "./components/Availabilities/_Availabilities.scss";
-@import "./components/DateAdder/_DateAdder.scss";
-@import "./components/HomePage/_HomePage.scss";
-@import "./components/Login/_Login.scss";
+// @import "./components/Artwork/_Artwork.scss";
+// @import "./components/Availabilities/_Availabilities.scss";
+// @import "./components/DateAdder/_DateAdder.scss";
+//@import "./components/HomePage/_HomePage.scss";
+// @import "./components/Login/_Login.scss";
 @import "./components/Nav/_Nav.scss";
-@import "./components/Profile/_Profile.scss";
-@import "./components/SearchResults/_SearchResults.scss";
-@import "./components/Signup/_Signup.scss";
-@import "./components/MessagesPage/Messages.scss";
+// @import "./components/Profile/_Profile.scss";
+//@import "./components/SearchResults/_SearchResults.scss";
+@import "./components/MessagesPage/_Messages.scss";
+//@import "./components/Signup/_Signup.scss";
 
 :root {
   font-family: Helvetica, Arial, sans-serif;
