--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,12 @@
 #Nav {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   display: block;
   background-color: rgba(255, 255, 255, 0);
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   background-image: none;
   background-size: cover;
   background-repeat: no-repeat;
@@ -24,7 +25,8 @@
 }
 
 #Nav #nav-left-container {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   display: table;
@@ -32,11 +34,12 @@
   margin: 0 auto;
   width: 100%;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #Nav #nav-left-container #nav-inner-l {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   -webkit-transition: max-width 0.5s, min-width 0.5s;
@@ -60,7 +63,8 @@
 }
 
 #Nav #nav-right-container {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   width: 100%;
@@ -116,9 +120,13 @@
   height: 60px;
   color: #233948;
   text-decoration: none;
-  text-shadow: 0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white, 2px -2px 0 white, 2px -1px 0 white, 2px 0px 0 white, -2px -2px 0 white, -2px -1px 0 white, -2px 0px 0 white, 1px -2px 0 white, 1px -1px 0 white, 1px 0px 0 white, -1px -2px 0 white, -1px -1px 0 white, -1px 0px 0 white, 0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white;
+  text-shadow: 0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white,
+    2px -2px 0 white, 2px -1px 0 white, 2px 0px 0 white, -2px -2px 0 white,
+    -2px -1px 0 white, -2px 0px 0 white, 1px -2px 0 white, 1px -1px 0 white,
+    1px 0px 0 white, -1px -2px 0 white, -1px -1px 0 white, -1px 0px 0 white,
+    0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 transparent inset;
-          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 transparent inset;
+  box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 transparent inset;
   -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
@@ -127,14 +135,14 @@
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
-          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
+  box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
 }
 
 #Nav #nav-right-container #nav-inner-r #link a:active {
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
-          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
+  box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
 }
 
 #Nav #nav-right-container #nav-inner-r #link a::-moz-selection {
@@ -154,18 +162,18 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding-top: 3em;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .searchForm button {
   margin-left: 2em;
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-grid-row-align: center;
+  align-self: center;
 }
 
 .message-profile-pic {
@@ -173,6 +181,181 @@
   height: 70px;
   width: 70px;
   border-radius: 50%;
+}
+* {
+  padding: 50;
+  margin: 50;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+form {
+  width: 800px;
+  min-height: 500px;
+  height: auto;
+  border-radius: 5px;
+  margin: 10% auto;
+  -webkit-box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
+  box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
+  padding: 10%;
+  background-image: linear-gradient(-225deg, #f3ffef 50%, #9dd57c 50%);
+}
+
+/* form Container */
+form .con {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+/* the header form form */
+header {
+  margin: 2% auto 10% auto;
+  text-align: center;
+}
+
+/* Login title form form */
+header h2 {
+  font-size: 250%;
+  font-family: "Playfair Display", serif;
+  color: #3e403f;
+}
+
+/*  A welcome message or an explanation of the login form */
+header p {
+  letter-spacing: 0.05em;
+}
+
+/* //////////////////////////////////////////// */
+/* //////////////////////////////////////////// */
+.input-item {
+  background: #fff;
+  color: #333;
+  padding: 14.5px 0px 15px 9px;
+  border-radius: 5px 0px 0px 5px;
+}
+
+/* Show/hide password Font Icon */
+#eye {
+  background: #fff;
+  color: #333;
+  margin: 5.9px 0 0 0;
+  margin-left: -20px;
+  padding: 15px 9px 19px 0px;
+  border-radius: 0px 5px 5px 0px;
+  float: right;
+  position: relative;
+  right: 1%;
+  top: -0.2%;
+  z-index: 5;
+  cursor: pointer;
+}
+
+/* inputs form  */
+input[class="form-input"] {
+  width: 240px;
+  height: 50px;
+  margin-top: 2%;
+  padding: 15px;
+  font-size: 16px;
+  font-family: "Abel", sans-serif;
+  color: #5e6472;
+  outline: none;
+  border: none;
+  border-radius: 0px 5px 5px 0px;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+
+input[id="txt-input"] {
+  width: 250px;
+}
+
+/* focus  */
+input:focus {
+  -webkit-transform: translateX(-2px);
+  transform: translateX(-2px);
+  border-radius: 5px;
+}
+
+/* //////////////////////////////////////////// */
+/* //////////////////////////////////////////// */
+/* input[type="text"] {min-width: 250px;} */
+/* buttons  */
+button {
+  display: inline-block;
+  color: #252537;
+  width: 280px;
+  height: 50px;
+  padding: 0 20px;
+  background: #fff;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  margin: 7% auto;
+  letter-spacing: 0.05em;
+}
+
+/* Submits */
+.submits {
+  width: 48%;
+  display: inline-block;
+  margin-left: 2%;
+}
+
+/*       Forgot Password button FAF3DD  */
+.frgt-pass {
+  background: transparent;
+}
+
+/*     Sign Up button  */
+.sign-up {
+  background: #b8f2e6;
+}
+
+/* buttons hover */
+button:hover {
+  -webkit-transform: translatey(3px);
+  transform: translatey(3px);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+/* buttons hover Animation */
+button:hover {
+  -webkit-animation: ani9 0.4s ease-in-out infinite alternate;
+  animation: ani9 0.4s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes ani9 {
+  0% {
+    -webkit-transform: translateY(3px);
+    transform: translateY(3px);
+  }
+  100% {
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+  }
+}
+
+@keyframes ani9 {
+  0% {
+    -webkit-transform: translateY(3px);
+    transform: translateY(3px);
+  }
+  100% {
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+  }
 }
 
 :root {
