--- a/artistree/client/src/components/Signup/_Signup.scss
+++ b/artistree/client/src/components/Signup/_Signup.scss
@@ -1,93 +1,68 @@
 * {
-  padding: 50;
+  padding: 10;
   margin: 50;
   box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, sans-serif;
 }
 
 form {
-  width: 800px;
-  min-height: 500px;
+  width: 550px;
   height: auto;
   border-radius: 5px;
   margin: 10% auto;
   box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
-  padding: 10%;
-  background-image: linear-gradient(-225deg, #f3ffef 50%, #9dd57c 50%);
+  padding: 1%;
+  background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
 }
 /* form Container */
 form .con {
   display: -webkit-flex;
   display: flex;
-
   -webkit-justify-content: space-around;
   justify-content: space-around;
-
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
-
-  margin: 0 auto;
+  margin: 10% auto;
 }
-
 /* the header form form */
 header {
   margin: 2% auto 10% auto;
   text-align: center;
 }
-/* Login title form form */
+/* title form form */
 header h2 {
+  font-family: Montserrat, sans-serif;
   font-size: 250%;
-  font-family: "Playfair Display", serif;
   color: #3e403f;
 }
-/*  A welcome message or an explanation of the login form */
+/*  A welcome message or an explanation of the form */
 header p {
   letter-spacing: 0.05em;
+  color: #3e403f;
 }
-
-/* //////////////////////////////////////////// */
-/* //////////////////////////////////////////// */
 
 .input-item {
-  background: #fff;
   color: #333;
-  padding: 14.5px 0px 15px 9px;
-  border-radius: 5px 0px 0px 5px;
-}
-
-/* Show/hide password Font Icon */
-#eye {
-  background: #fff;
-  color: #333;
-
-  margin: 5.9px 0 0 0;
-  margin-left: -20px;
-  padding: 15px 9px 19px 0px;
-  border-radius: 0px 5px 5px 0px;
-
-  float: right;
-  position: relative;
-  right: 1%;
-  top: -0.2%;
-  z-index: 5;
-
-  cursor: pointer;
-}
-/* inputs form  */
-input[class="form-input"] {
-  width: 240px;
+  width: 280px;
   height: 50px;
-
-  margin-top: 2%;
-  padding: 15px;
-
-  font-size: 16px;
-  font-family: "Abel", sans-serif;
-  color: #5e6472;
-
+  padding: 0 20px;
+  background: #fff;
+  border-radius: 5px;
   outline: none;
   border: none;
+}
 
-  border-radius: 0px 5px 5px 0px;
+/* inputs form  */
+input[class="form-input"] {
+  margin-top: 2%;
+  padding: 15px;
+  font-size: 16px;
+  font-family: Montserrat, sans-serif;
+  color: #5e6472;
+  outline: none;
+  border: none;
+  box-sizing: content-box;
   transition: 0.2s linear;
 }
 input[id="txt-input"] {
@@ -106,23 +81,18 @@ input:focus {
 /* buttons  */
 button {
   display: inline-block;
-  color: #252537;
-
+  color: #233948;
   width: 280px;
   height: 50px;
-
   padding: 0 20px;
   background: #fff;
   border-radius: 5px;
-
   outline: none;
   border: none;
-
   cursor: pointer;
   text-align: center;
   transition: all 0.2s linear;
-
-  margin: 7% auto;
+  margin: 3% auto;
   letter-spacing: 0.05em;
 }
 /* Submits */
@@ -130,16 +100,6 @@ button {
   width: 48%;
   display: inline-block;
   margin-left: 2%;
-}
-
-/*       Forgot Password button FAF3DD  */
-.frgt-pass {
-  background: transparent;
-}
-
-/*     Sign Up button  */
-.sign-up {
-  background: #b8f2e6;
 }
 
 /* buttons hover */
