--- a/artistree/client/src/components/Signup/_Signup.scss
+++ b/artistree/client/src/components/Signup/_Signup.scss
@@ -12,7 +12,7 @@ form {
   border-radius: 5px;
   margin: 10% auto;
   box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
-  padding: 1%;
+  padding: 2%;
   background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
 }
 /* form Container */
@@ -23,11 +23,11 @@ form .con {
   justify-content: space-around;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin: 10% auto;
+  margin: 3% auto;
 }
 /* the header form form */
 header {
-  margin: 2% auto 10% auto;
+  margin: 2% auto 7% auto;
   text-align: center;
 }
 /* title form form */
@@ -40,6 +40,11 @@ header h2 {
 header p {
   letter-spacing: 0.05em;
   color: #3e403f;
+}
+
+.field-set {
+  display: flex;
+  flex-direction: column;
 }
 
 .input-item {
@@ -92,7 +97,7 @@ button {
   cursor: pointer;
   text-align: center;
   transition: all 0.2s linear;
-  margin: 3% auto;
+  margin: 2% auto;
   letter-spacing: 0.05em;
 }
 /* Submits */
