--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,173 @@
+* {
+  padding: 10;
+  margin: 50;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+}
+
+form {
+  width: 550px;
+  height: auto;
+  border-radius: 5px;
+  margin: 10% auto;
+  -webkit-box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
+          box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
+  padding: 2%;
+  background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
+}
+
+/* form Container */
+form .con {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 3% auto;
+}
+
+/* the header form form */
+header {
+  margin: 2% auto 7% auto;
+  text-align: center;
+}
+
+/* title form form */
+header h2 {
+  font-family: Montserrat, sans-serif;
+  font-size: 250%;
+  color: #3e403f;
+}
+
+/*  A welcome message or an explanation of the form */
+header p {
+  letter-spacing: 0.05em;
+  color: #3e403f;
+}
+
+.field-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.input-item {
+  color: #333;
+  width: 280px;
+  height: 50px;
+  padding: 0 20px;
+  background: #fff;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+}
+
+/* inputs form  */
+input[class="form-input"] {
+  margin-top: 2%;
+  padding: 15px;
+  font-size: 16px;
+  font-family: Montserrat, sans-serif;
+  color: #5e6472;
+  outline: none;
+  border: none;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+
+input[id="txt-input"] {
+  width: 250px;
+}
+
+/* focus  */
+input:focus {
+  -webkit-transform: translateX(-2px);
+          transform: translateX(-2px);
+  border-radius: 5px;
+}
+
+/* //////////////////////////////////////////// */
+/* //////////////////////////////////////////// */
+/* input[type="text"] {min-width: 250px;} */
+/* buttons  */
+button {
+  display: inline-block;
+  color: #233948;
+  width: 280px;
+  height: 50px;
+  padding: 0 20px;
+  background: #fff;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  margin: 2% auto;
+  letter-spacing: 0.05em;
+}
+
+/* Submits */
+.submits {
+  width: 48%;
+  display: inline-block;
+  margin-left: 2%;
+}
+
+/* buttons hover */
+button:hover {
+  -webkit-transform: translatey(3px);
+          transform: translatey(3px);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+/* buttons hover Animation */
+button:hover {
+  -webkit-animation: ani9 0.4s ease-in-out infinite alternate;
+          animation: ani9 0.4s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes ani9 {
+  0% {
+    -webkit-transform: translateY(3px);
+            transform: translateY(3px);
+  }
+  100% {
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
+  }
+}
+
+@keyframes ani9 {
+  0% {
+    -webkit-transform: translateY(3px);
+            transform: translateY(3px);
+  }
+  100% {
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
+  }
+}
+
 #Nav {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   display: block;
   background-color: rgba(255, 255, 255, 0);
   -webkit-box-shadow: none;
-  box-shadow: none;
+          box-shadow: none;
   background-image: none;
   background-size: cover;
   background-repeat: no-repeat;
@@ -25,8 +186,7 @@
 }
 
 #Nav #nav-left-container {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   display: table;
@@ -34,12 +194,11 @@
   margin: 0 auto;
   width: 100%;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 #Nav #nav-left-container #nav-inner-l {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   -webkit-transition: max-width 0.5s, min-width 0.5s;
@@ -63,8 +222,7 @@
 }
 
 #Nav #nav-right-container {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   width: 100%;
@@ -120,13 +278,9 @@
   height: 60px;
   color: #233948;
   text-decoration: none;
-  text-shadow: 0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white,
-    2px -2px 0 white, 2px -1px 0 white, 2px 0px 0 white, -2px -2px 0 white,
-    -2px -1px 0 white, -2px 0px 0 white, 1px -2px 0 white, 1px -1px 0 white,
-    1px 0px 0 white, -1px -2px 0 white, -1px -1px 0 white, -1px 0px 0 white,
-    0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white;
+  text-shadow: 0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white, 2px -2px 0 white, 2px -1px 0 white, 2px 0px 0 white, -2px -2px 0 white, -2px -1px 0 white, -2px 0px 0 white, 1px -2px 0 white, 1px -1px 0 white, 1px 0px 0 white, -1px -2px 0 white, -1px -1px 0 white, -1px 0px 0 white, 0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 transparent inset;
-  box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 transparent inset;
+          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 transparent inset;
   -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
@@ -135,14 +289,14 @@
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
-  box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
+          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
 }
 
 #Nav #nav-right-container #nav-inner-r #link a:active {
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
-  box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
+          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
 }
 
 #Nav #nav-right-container #nav-inner-r #link a::-moz-selection {
@@ -162,18 +316,18 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-top: 3em;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .searchForm button {
   margin-left: 2em;
   -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .message-profile-pic {
@@ -182,13 +336,13 @@
   width: 70px;
   border-radius: 50%;
 }
+
 * {
   padding: 10;
   margin: 50;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, sans-serif;
+          box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
 }
 
 form {
@@ -197,7 +351,7 @@ form {
   border-radius: 5px;
   margin: 10% auto;
   -webkit-box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
-  box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
+          box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
   padding: 2%;
   background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
 }
@@ -208,9 +362,9 @@ form .con {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 3% auto;
 }
 
@@ -239,8 +393,8 @@ header p {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .input-item {
@@ -264,7 +418,7 @@ input[class="form-input"] {
   outline: none;
   border: none;
   -webkit-box-sizing: content-box;
-  box-sizing: content-box;
+          box-sizing: content-box;
   -webkit-transition: 0.2s linear;
   transition: 0.2s linear;
 }
@@ -276,7 +430,7 @@ input[id="txt-input"] {
 /* focus  */
 input:focus {
   -webkit-transform: translateX(-2px);
-  transform: translateX(-2px);
+          transform: translateX(-2px);
   border-radius: 5px;
 }
 
@@ -312,37 +466,265 @@ button {
 /* buttons hover */
 button:hover {
   -webkit-transform: translatey(3px);
-  transform: translatey(3px);
+          transform: translatey(3px);
   -webkit-box-shadow: none;
-  box-shadow: none;
+          box-shadow: none;
 }
 
 /* buttons hover Animation */
 button:hover {
   -webkit-animation: ani9 0.4s ease-in-out infinite alternate;
-  animation: ani9 0.4s ease-in-out infinite alternate;
-}
-
-@-webkit-keyframes ani9 {
-  0% {
-    -webkit-transform: translateY(3px);
-    transform: translateY(3px);
-  }
-  100% {
-    -webkit-transform: translateY(5px);
-    transform: translateY(5px);
-  }
+          animation: ani9 0.4s ease-in-out infinite alternate;
 }
 
 @keyframes ani9 {
   0% {
     -webkit-transform: translateY(3px);
-    transform: translateY(3px);
+            transform: translateY(3px);
   }
   100% {
     -webkit-transform: translateY(5px);
-    transform: translateY(5px);
+            transform: translateY(5px);
   }
+}
+
+body {
+  font-family: "Arial";
+}
+
+.profile-container {
+  max-width: 1250px;
+  margin: 30px auto 30px;
+  padding: 0 !important;
+  width: 90%;
+  background-color: #fff;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+header {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: #618a42;
+  height: 250px;
+}
+
+header i {
+  position: relative;
+  cursor: pointer;
+  right: -96%;
+  top: 25px;
+  font-size: 18px !important;
+  color: #fff;
+}
+
+@media (max-width: 800px) {
+  header {
+    height: 150px;
+  }
+  header i {
+    right: -90%;
+  }
+}
+
+main {
+  padding: 20px 20px 0px 20px;
+}
+
+.left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.photo {
+  width: 200px;
+  height: 200px;
+  margin-top: -120px;
+  border-radius: 100px;
+  border: 4px solid #fff;
+}
+
+.active {
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  position: absolute;
+  right: calc(50% - 70px);
+  top: 75px;
+  background-color: #ffc107;
+  border: 3px solid #fff;
+}
+
+@media (max-width: 990px) {
+  .active {
+    right: calc(50% - 60px);
+    top: 50px;
+  }
+}
+
+.name {
+  margin-top: 20px;
+  font-family: "Open Sans";
+  font-weight: 600;
+  font-size: 18pt;
+  color: #777;
+}
+
+.info {
+  margin-top: -5px;
+  margin-bottom: 5px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 11pt;
+  color: #aaa;
+}
+
+.stats {
+  margin-top: 25px;
+  text-align: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #ededed;
+  font-family: "Montserrat", sans-serif;
+}
+
+.number-stat {
+  padding: 0px;
+  font-size: 14pt;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  color: #aaa;
+}
+
+.desc-stat {
+  margin-top: -15px;
+  font-size: 10pt;
+  color: #bbb;
+}
+
+.desc {
+  text-align: center;
+  margin-top: 25px;
+  margin: 25px 40px;
+  color: #999;
+  font-size: 11pt;
+  font-family: "Open Sans";
+  padding-bottom: 25px;
+  border-bottom: 1px solid #ededed;
+}
+
+.social {
+  margin: 5px 0 12px 0;
+  text-align: center;
+  display: inline-block;
+  font-size: 20pt;
+}
+
+.social i {
+  cursor: pointer;
+  margin: 0 15px;
+}
+
+.social i:nth-child(1) {
+  color: #4267b2;
+}
+
+.social i:nth-child(2) {
+  color: #1da1f2;
+}
+
+.social i:nth-child(3) {
+  color: #bd081c;
+}
+
+.social i:nth-child(4) {
+  color: #36465d;
+}
+
+.right {
+  padding: 0 25px 0 25px !important;
+}
+
+.nav {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+.nav li {
+  margin: 40px 30px 0 10px;
+  cursor: pointer;
+  font-size: 13pt;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  color: #888;
+}
+
+.nav li:hover,
+.nav li:nth-child(1) {
+  color: #999;
+  border-bottom: 2px solid #999;
+}
+
+.follow {
+  position: absolute;
+  right: 8%;
+  top: 35px;
+  font-size: 11pt;
+  background-color: #42b1fa;
+  color: #fff;
+  padding: 8px 15px;
+  cursor: pointer;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+}
+
+.follow:hover {
+  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.2), 0 0 15px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 15px rgba(0, 0, 0, 0.2), 0 0 15px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 990px) {
+  .nav {
+    display: none;
+  }
+  .follow {
+    width: 50%;
+    margin-left: 25%;
+    display: block;
+    position: unset;
+    text-align: center;
+  }
+}
+
+.gallery {
+  margin-top: 35px;
+}
+
+.gallery div {
+  margin-bottom: 30px;
+}
+
+.gallery img {
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
+  width: auto;
+  height: auto;
+  cursor: pointer;
+  max-width: 100%;
 }
 
 :root {
