--- a/client/src/index.css
+++ b/client/src/index.css
@@ -488,25 +488,31 @@ button:hover {
   }
 }
 
-body {
-  font-family: "Arial";
+.page {
+  padding: 10;
+  margin: 50;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
 }
 
-.profile-container {
+.container {
   max-width: 1250px;
-  margin: 30px auto 30px;
-  padding: 0 !important;
+  border-radius: 5px;
+  margin: 10% auto;
   width: 90%;
   background-color: #fff;
-  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
+          box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
+  padding: 2%;
 }
 
-header {
+.profile-banner {
+  background: #eee;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-color: #618a42;
+  background-color: #9dd57c;
   height: 250px;
 }
 
@@ -556,24 +562,6 @@ main {
   border: 4px solid #fff;
 }
 
-.active {
-  width: 20px;
-  height: 20px;
-  border-radius: 20px;
-  position: absolute;
-  right: calc(50% - 70px);
-  top: 75px;
-  background-color: #ffc107;
-  border: 3px solid #fff;
-}
-
-@media (max-width: 990px) {
-  .active {
-    right: calc(50% - 60px);
-    top: 50px;
-  }
-}
-
 .name {
   margin-top: 20px;
   font-family: "Open Sans";
@@ -588,143 +576,6 @@ main {
   font-family: "Montserrat", sans-serif;
   font-size: 11pt;
   color: #aaa;
-}
-
-.stats {
-  margin-top: 25px;
-  text-align: center;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #ededed;
-  font-family: "Montserrat", sans-serif;
-}
-
-.number-stat {
-  padding: 0px;
-  font-size: 14pt;
-  font-weight: bold;
-  font-family: "Montserrat", sans-serif;
-  color: #aaa;
-}
-
-.desc-stat {
-  margin-top: -15px;
-  font-size: 10pt;
-  color: #bbb;
-}
-
-.desc {
-  text-align: center;
-  margin-top: 25px;
-  margin: 25px 40px;
-  color: #999;
-  font-size: 11pt;
-  font-family: "Open Sans";
-  padding-bottom: 25px;
-  border-bottom: 1px solid #ededed;
-}
-
-.social {
-  margin: 5px 0 12px 0;
-  text-align: center;
-  display: inline-block;
-  font-size: 20pt;
-}
-
-.social i {
-  cursor: pointer;
-  margin: 0 15px;
-}
-
-.social i:nth-child(1) {
-  color: #4267b2;
-}
-
-.social i:nth-child(2) {
-  color: #1da1f2;
-}
-
-.social i:nth-child(3) {
-  color: #bd081c;
-}
-
-.social i:nth-child(4) {
-  color: #36465d;
-}
-
-.right {
-  padding: 0 25px 0 25px !important;
-}
-
-.nav {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-}
-
-.nav li {
-  margin: 40px 30px 0 10px;
-  cursor: pointer;
-  font-size: 13pt;
-  text-transform: uppercase;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  color: #888;
-}
-
-.nav li:hover,
-.nav li:nth-child(1) {
-  color: #999;
-  border-bottom: 2px solid #999;
-}
-
-.follow {
-  position: absolute;
-  right: 8%;
-  top: 35px;
-  font-size: 11pt;
-  background-color: #42b1fa;
-  color: #fff;
-  padding: 8px 15px;
-  cursor: pointer;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-}
-
-.follow:hover {
-  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.2), 0 0 15px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 15px rgba(0, 0, 0, 0.2), 0 0 15px rgba(0, 0, 0, 0.2);
-}
-
-@media (max-width: 990px) {
-  .nav {
-    display: none;
-  }
-  .follow {
-    width: 50%;
-    margin-left: 25%;
-    display: block;
-    position: unset;
-    text-align: center;
-  }
-}
-
-.gallery {
-  margin-top: 35px;
-}
-
-.gallery div {
-  margin-bottom: 30px;
-}
-
-.gallery img {
-  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
-  width: auto;
-  height: auto;
-  cursor: pointer;
-  max-width: 100%;
 }
 
 :root {
