fixed nav bar margin

--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -11,7 +11,7 @@
   border-radius: 5px;
   margin: 10% auto;
   width: 90%;
-  background-color: #fff;
+  //background-color: #fff;
   box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
   padding: 2%;
 }
@@ -32,7 +32,7 @@ header i {
   right: -96%;
   top: 25px;
   font-size: 18px !important;
-  color: #fff;
+  //color: #fff;
 }
 
 @media (max-width: 800px) {
@@ -45,7 +45,7 @@ header i {
   }
 }
 
-main {
+section {
   padding: 20px 20px 0px 20px;
 }
 
