--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,7 +1,6 @@
 @import "./components/Artwork/_Artwork.scss";
 @import "./components/Availabilities/_Availabilities.scss";
 @import "./components/DateAdder/_DateAdder.scss";
-@import "./components/HomePage/_HomePage.scss";
 @import "./components/Login/_Login.scss";
 @import "./components/Nav/_Nav.scss";
 @import "./components/SearchResults/_SearchResults.scss";
@@ -11,4 +10,8 @@
 
 :root {
   font-family: Helvetica, Arial, sans-serif;
+}
+
+main {
+  margin-top: 105px;
 }
