--- a/client/src/components/Nav/_Nav.scss
+++ b/client/src/components/Nav/_Nav.scss
@@ -1,4 +1,4 @@
-#Nav {
+nav {
   $color-accent: #233948;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, sans-serif;
@@ -6,12 +6,8 @@
   cursor: auto;
   display: block;
   background-color: rgba(255, 255, 255, 0);
-  box-shadow: none;
-  background-image: none;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
   width: 100%;
+  height: 105px;
   position: fixed;
   top: 0;
   left: 0;
@@ -109,13 +105,6 @@
 
           color: $color-accent;
           text-decoration: none;
-          text-shadow: 0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white,
-            2px -2px 0 white, 2px -1px 0 white, 2px 0px 0 white,
-            -2px -2px 0 white, -2px -1px 0 white, -2px 0px 0 white,
-            1px -2px 0 white, 1px -1px 0 white, 1px 0px 0 white,
-            -1px -2px 0 white, -1px -1px 0 white, -1px 0px 0 white,
-            0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white;
-          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 transparent inset;
 
           transition: all 0.3s ease-in;
 
