--- a/client/src/index.css
+++ b/client/src/index.css
@@ -160,19 +160,14 @@ button:hover {
   }
 }
 
-#Nav {
+nav {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   display: block;
   background-color: rgba(255, 255, 255, 0);
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  background-image: none;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
   width: 100%;
+  height: 105px;
   position: fixed;
   top: 0;
   left: 0;
@@ -185,7 +180,7 @@ button:hover {
   border-color: rgba(255, 255, 255, 0.17);
 }
 
-#Nav #nav-left-container {
+nav #nav-left-container {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
@@ -197,7 +192,7 @@ button:hover {
           box-sizing: border-box;
 }
 
-#Nav #nav-left-container #nav-inner-l {
+nav #nav-left-container #nav-inner-l {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
@@ -207,7 +202,7 @@ button:hover {
   vertical-align: middle;
 }
 
-#Nav #nav-left-container #nav-inner-l img {
+nav #nav-left-container #nav-inner-l img {
   width: 10vh;
   height: auto;
   display: block;
@@ -221,7 +216,7 @@ button:hover {
   background-image: none;
 }
 
-#Nav #nav-right-container {
+nav #nav-right-container {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
@@ -232,7 +227,7 @@ button:hover {
   vertical-align: middle;
 }
 
-#Nav #nav-right-container #nav-inner-r {
+nav #nav-right-container #nav-inner-r {
   color: #7f7f7f;
   cursor: auto;
   list-style: none;
@@ -243,7 +238,7 @@ button:hover {
   font-size: 0;
 }
 
-#Nav #nav-right-container #nav-inner-r #link {
+nav #nav-right-container #nav-inner-r #link {
   font-family: Montserrat, sans-serif;
   position: relative;
   min-height: 22px;
@@ -260,7 +255,7 @@ button:hover {
   text-decoration: none;
 }
 
-#Nav #nav-right-container #nav-inner-r #link a {
+nav #nav-right-container #nav-inner-r #link a {
   list-style: none;
   font-family: Montserrat, sans-serif;
   letter-spacing: 1px;
@@ -278,34 +273,31 @@ button:hover {
   height: 60px;
   color: #233948;
   text-decoration: none;
-  text-shadow: 0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white, 2px -2px 0 white, 2px -1px 0 white, 2px 0px 0 white, -2px -2px 0 white, -2px -1px 0 white, -2px 0px 0 white, 1px -2px 0 white, 1px -1px 0 white, 1px 0px 0 white, -1px -2px 0 white, -1px -1px 0 white, -1px 0px 0 white, 0px -2px 0 white, 0px -1px 0 white, 0px 0px 0 white;
-  -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 transparent inset;
-          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 transparent inset;
   -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
 
-#Nav #nav-right-container #nav-inner-r #link a:hover {
+nav #nav-right-container #nav-inner-r #link a:hover {
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
           box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
 }
 
-#Nav #nav-right-container #nav-inner-r #link a:active {
+nav #nav-right-container #nav-inner-r #link a:active {
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
           box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
 }
 
-#Nav #nav-right-container #nav-inner-r #link a::-moz-selection {
+nav #nav-right-container #nav-inner-r #link a::-moz-selection {
   color: white;
   background: #233948;
   text-shadow: none;
 }
 
-#Nav #nav-right-container #nav-inner-r #link a::selection {
+nav #nav-right-container #nav-inner-r #link a::selection {
   color: white;
   background: #233948;
   text-shadow: none;
@@ -501,7 +493,6 @@ button:hover {
   border-radius: 5px;
   margin: 10% auto;
   width: 90%;
-  background-color: #fff;
   -webkit-box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
           box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
   padding: 2%;
@@ -522,7 +513,6 @@ header i {
   right: -96%;
   top: 25px;
   font-size: 18px !important;
-  color: #fff;
 }
 
 @media (max-width: 800px) {
@@ -534,7 +524,7 @@ header i {
   }
 }
 
-main {
+section {
   padding: 20px 20px 0px 20px;
 }
 
@@ -580,5 +570,9 @@ main {
 
 :root {
   font-family: Helvetica, Arial, sans-serif;
+}
+
+main {
+  margin-top: 105px;
 }
 /*# sourceMappingURL=index.css.map */
