--- a/client/src/components/MessagesPage/_Messages.scss
+++ b/client/src/components/MessagesPage/_Messages.scss
@@ -2,27 +2,63 @@
   max-height: calc(100vh - 115px);
   position: relative;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: minmax(100px, 1fr) minmax(300px, 3fr);
   grid-template-rows: calc(100vh - 105px);
   overflow: hidden;
+
   &.container {
     max-width: 1250px;
     border-radius: 5px;
     margin-bottom: 0;
     width: 90%;
-    box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
-    padding: 2%;
+    box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
+  }
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
   }
 }
 
 .messages-list {
   max-height: 100%;
   overflow-y: scroll;
+  overflow-x: hidden;
+  padding-top: 1em;
+  margin-right: 0.5em;
+  border-right: 1px solid #9b9caaa9;
+}
+.message-preview {
+  display: grid;
+  grid-template-columns: 70px auto;
+  margin-bottom: 1em;
+  text-decoration: none;
+  &:hover {
+  }
+}
+.name-and-message {
+  padding-left: 1em;
+  display: flex;
+  flex-direction: column;
+  span {
+    font-size: 85%;
+  }
+  p {
+    margin-bottom: 0em;
+    margin-top: 0.6em;
+    color: #737488;
+    &.name-from {
+      color: #3a3b4a;
+    }
+  }
 }
 .messages-chat {
   max-height: 100%;
   display: grid;
   grid-template-rows: 10fr 1fr;
+  padding: 1em;
+  padding-left: 2em;
+
   ul {
     overflow-y: scroll;
   }
@@ -32,9 +68,26 @@
   height: 70px;
   width: 70px;
   border-radius: 50%;
+  flex: 1;
 
   &.small {
     height: 50px;
     width: 50px;
+  }
+}
+
+.message {
+  display: flex;
+  &.incoming {
+    justify-content: flex-start;
+    p {
+      background-color: #d3f0c7;
+    }
+  }
+  &.outgoing {
+    p {
+      background-color: #9dd57c;
+    }
+    justify-content: flex-end;
   }
 }
