--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -1,6 +1,4 @@
 .page {
-  padding: 10;
-  margin: 50;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, sans-serif;
@@ -11,13 +9,13 @@
     margin: 10% auto;
     width: 90%;
     //background-color: #fff;
-    box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
+    box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
     padding: 2%;
   }
 
   .profile-banner {
     background: #eee;
-    //background-image: url("https://images.pexels.com/photos/1731427/pexels-photo-1731427.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    //background-image: url("https://res.cloudinary.com/artistree/image/upload/v1590077361/artistree/pngkey.com-camera-icon-png-104955_sjufa6.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -75,30 +73,65 @@
     border-radius: 100px;
     border: 4px solid #fff;
     position: relative;
-    opacity: 0.7;
+    opacity: 0;
     cursor: pointer;
     overflow: hidden;
     outline: none;
     //opacity: 0;
-    transition: opacity 0.13s ease-out;
+    // transition: opacity 0.13s ease-out;
+
+    &:hover {
+      opacity: 0.7;
+      color: white;
+      display: block;
+      text-align: center;
+      line-height: 250px;
+      font-size: 0.85em;
+      background-color: black;
+      background-size: 20%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-image: url("https://res.cloudinary.com/artistree/image/upload/v1590077361/artistree/pngkey.com-camera-icon-png-104955_sjufa6.png");
+    }
+
+    // &:active {
+    //   transition: all 0.3s ease-out;
+    //   box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 $color-accent inset;
+    // }
+
+    // &::selection {
+    //   color: white;
+    //   background: $color-accent;
+    //   text-shadow: none;
+    // }
   }
 
   .name {
     margin-top: 20px;
-    font-family: "Open Sans";
     font-weight: 600;
-    font-size: 18pt;
+    font-size: 20pt;
     color: #777;
   }
 
   .info {
-    margin-top: -5px;
-    margin-bottom: 5px;
-    font-family: "Montserrat", sans-serif;
-    font-size: 11pt;
+    font-size: 15pt;
     color: #aaa;
+    text-align: center;
+    margin-bottom: 5px;
+    margin-top: 5px;
   }
 
+  .info-div {
+    text-align: center;
+    margin-top: 5px;
+  }
+
+  .bio {
+    display: block;
+    align-items: flex-start;
+    // justify-content: center;
+    flex-direction: column;
+  }
   .desc {
     text-align: center;
     margin-top: 25px;
@@ -106,12 +139,16 @@
     color: #999;
     font-size: 15pt;
     font-family: "Open Sans";
-    padding-bottom: 25px;
+    padding: 10px 100px 10px 100px;
     border-bottom: 1px solid #ededed;
   }
 
   .right {
     padding: 0 25px 0 25px !important;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    flex-direction: column;
   }
 
   .side-nav {
@@ -140,31 +177,71 @@
     }
   }
 
-  .my-messages {
-    position: absolute;
-    right: 8%;
-    top: 35px;
-    font-size: 11pt;
-    background-color: #9dd57c;
-    color: #fff;
-    padding: 8px 15px;
-    cursor: pointer;
-    transition: all 0.4s;
-    font-weight: 400;
-  }
   .my-messages a {
     text-decoration: none;
-    color: #fff;
+    color: #233948;
   }
-  .my-messages {
-    width: 50%;
-    margin-left: 25%;
-    display: block;
-    position: unset;
+  //   .my-messages {
+  //     width: 15%;
+  //     display: block;
+  //     position: unset;
+  //     text-align: center;
+  //   }
+  //   .my-messages:hover {
+  //     box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
+  //   }
+
+  button {
+    display: inline-block;
+    color: #233948;
+    width: 280px;
+    height: 50px;
+    padding: 0 20px;
+    background: #fff;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    cursor: pointer;
     text-align: center;
+    transition: all 0.2s linear;
+    margin: 30px 30px 30px 30px;
+    letter-spacing: 0.05em;
+    box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
   }
-  .my-messages:hover {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2), 0 0 15px rgba(0, 0, 0, 0.2);
+  .submit {
+    display: inline-block;
+    color: #233948;
+    width: 280px;
+    height: 50px;
+    padding: 0 20px;
+    background: #fff;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.2s linear;
+    margin: 30px auto;
+    letter-spacing: 0.05em;
+  }
+
+  /* buttons hover */
+  button:hover {
+    transform: translatey(3px);
+    box-shadow: none;
+  }
+
+  /* buttons hover Animation */
+  button:hover {
+    animation: ani9 0.4s ease-in-out infinite alternate;
+  }
+  @keyframes ani9 {
+    0% {
+      transform: translateY(3px);
+    }
+    100% {
+      transform: translateY(5px);
+    }
   }
 
   .gallery {
@@ -181,5 +258,105 @@
     height: auto;
     cursor: pointer;
     max-width: 100%;
+  }
+
+  form {
+    width: 550px;
+    height: auto;
+    border-radius: 5px;
+    margin: 10% auto;
+    box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
+    padding: 2%;
+    background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
+  }
+  /* form Container */
+  form .con {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 3% auto;
+  }
+  //   /* the header form form */
+  //   header {
+  //     margin: 2% auto 7% auto;
+  //     text-align: center;
+  //   }
+  //   /* title form form */
+  //   header h2 {
+  //     font-family: Montserrat, sans-serif;
+  //     font-size: 250%;
+  //     color: #3e403f;
+  //   }
+  //   /*  A welcome message or an explanation of the form */
+  //   header p {
+  //     letter-spacing: 0.05em;
+  //     color: #3e403f;
+  //   }
+
+  .field-set {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .input-item {
+    color: #333;
+    width: 280px;
+    height: 50px;
+    padding: 0 20px;
+    background: #fff;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+  }
+
+  /* inputs form  */
+  input[class="form-input"] {
+    margin-top: 2%;
+    padding: 15px 15px 15px 15px;
+    font-size: 16px;
+    font-family: Montserrat, sans-serif;
+    color: #5e6472;
+    outline: none;
+    border: none;
+    box-sizing: content-box;
+    transition: 0.2s linear;
+  }
+  input[id="txt-input"] {
+    width: 250px;
+  }
+  /* focus  */
+  input:focus {
+    transform: translateX(-2px);
+    border-radius: 5px;
+  }
+
+  .select-input {
+    padding: 1.3em 1.4em 1.3em 0.8em;
+  }
+
+  .text-input {
+    margin-top: 2%;
+    font-size: 16px;
+    font-family: Montserrat, sans-serif;
+    color: #5e6472;
+    outline: none;
+    border: none;
+    box-sizing: content-box;
+    transition: 0.2s linear;
+    padding: 2.6em 1.4em 2.6em 0.8em;
+  }
+
+  label {
+    padding: 0.8em 1.4em 0.4em 0.8em;
+  }
+
+  .edit-buttons {
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
