--- a/client/src/components/DateAdder/_DateAdder.scss
+++ b/client/src/components/DateAdder/_DateAdder.scss
@@ -1,1 +1,18 @@
 // don't delete
+.button-forms {
+  display: inline-block;
+  color: #233948;
+  width: 280px;
+  height: 50px;
+  padding: 0 20px;
+  background: #fff;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  transition: all 0.2s linear;
+  margin: 30px 30px 30px 30px;
+  letter-spacing: 0.05em;
+  box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
+}
