--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -191,7 +191,7 @@
   //     box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
   //   }
 
-  button {
+  .button-forms {
     display: inline-block;
     color: #233948;
     width: 280px;
@@ -208,6 +208,42 @@
     letter-spacing: 0.05em;
     box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
   }
+
+  .button-edit-profile {
+    display: inline-block;
+    color: #233948;
+    width: 280px;
+    height: 50px;
+    padding: 0 20px;
+    background: #fff;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.2s linear;
+    margin: 30px 30px 30px 30px;
+    letter-spacing: 0.05em;
+    box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
+  }
+  .button-complete-profile {
+    display: inline-block;
+    color: #233948;
+    width: 280px;
+    height: 50px;
+    padding: 0 20px;
+    background: #fff;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.2s linear;
+    margin: 30px 30px 30px 30px;
+    letter-spacing: 0.05em;
+    box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
+  }
+
   .submit {
     display: inline-block;
     color: #233948;
@@ -279,22 +315,6 @@
     flex-wrap: wrap;
     margin: 3% auto;
   }
-  //   /* the header form form */
-  //   header {
-  //     margin: 2% auto 7% auto;
-  //     text-align: center;
-  //   }
-  //   /* title form form */
-  //   header h2 {
-  //     font-family: Montserrat, sans-serif;
-  //     font-size: 250%;
-  //     color: #3e403f;
-  //   }
-  //   /*  A welcome message or an explanation of the form */
-  //   header p {
-  //     letter-spacing: 0.05em;
-  //     color: #3e403f;
-  //   }
 
   .field-set {
     display: flex;
