deleted unnecessary link from nav

--- a/client/src/components/Nav/_Nav.scss
+++ b/client/src/components/Nav/_Nav.scss
@@ -71,7 +71,7 @@ nav {
       text-align: right;
       font-size: 0;
 
-      #link {
+      .link {
         font-family: Montserrat, sans-serif;
         position: relative;
         min-height: 22px;
