--- a/client/src/components/MessagesPage/_Messages.scss
+++ b/client/src/components/MessagesPage/_Messages.scss
@@ -9,6 +9,7 @@
   &.container {
     max-width: 1250px;
     border-radius: 5px;
+    margin: auto;
     margin-bottom: 0;
     width: 90%;
     box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
@@ -133,7 +134,9 @@
 }
 
 .message-send {
+  border-radius: 4px;
   width: 70px;
+  height: 50px;
   border: 1px solid black;
   margin: 0;
 }
