--- a/client/src/index.css
+++ b/client/src/index.css
@@ -282,7 +282,7 @@ nav #nav-right-container #nav-inner-r {
   font-size: 0;
 }
 
-nav #nav-right-container #nav-inner-r #link {
+nav #nav-right-container #nav-inner-r .link {
   font-family: Montserrat, sans-serif;
   position: relative;
   min-height: 22px;
@@ -299,7 +299,7 @@ nav #nav-right-container #nav-inner-r #link {
   text-decoration: none;
 }
 
-nav #nav-right-container #nav-inner-r #link a {
+nav #nav-right-container #nav-inner-r .link a {
   list-style: none;
   font-family: Montserrat, sans-serif;
   letter-spacing: 1px;
@@ -321,27 +321,27 @@ nav #nav-right-container #nav-inner-r #link a {
   transition: all 0.3s ease-in;
 }
 
-nav #nav-right-container #nav-inner-r #link a:hover {
+nav #nav-right-container #nav-inner-r .link a:hover {
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
           box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
 }
 
-nav #nav-right-container #nav-inner-r #link a:active {
+nav #nav-right-container #nav-inner-r .link a:active {
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
           box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
 }
 
-nav #nav-right-container #nav-inner-r #link a::-moz-selection {
+nav #nav-right-container #nav-inner-r .link a::-moz-selection {
   color: white;
   background: #233948;
   text-shadow: none;
 }
 
-nav #nav-right-container #nav-inner-r #link a::selection {
+nav #nav-right-container #nav-inner-r .link a::selection {
   color: white;
   background: #233948;
   text-shadow: none;
@@ -381,6 +381,7 @@ nav #nav-right-container #nav-inner-r #link a::selection {
 .messages-page.container {
   max-width: 1250px;
   border-radius: 5px;
+  margin: auto;
   margin-bottom: 0;
   width: 90%;
   -webkit-box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
@@ -541,7 +542,9 @@ nav #nav-right-container #nav-inner-r #link a::selection {
 }
 
 .message-send {
+  border-radius: 4px;
   width: 70px;
+  height: 50px;
   border: 1px solid black;
   margin: 0;
 }
