--- a/client/src/index.css
+++ b/client/src/index.css
@@ -685,6 +685,7 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
   /* buttons hover */
   /* buttons hover Animation */
+  /* buttons hover Animation */
   /* form Container */
   /* inputs form  */
   /* focus  */
@@ -882,8 +883,18 @@ nav #nav-right-container #nav-inner-r #link a::selection {
 }
 
 .page .my-messages a {
+  display: inline-block;
   text-decoration: none;
   color: #233948;
+  text-align: center;
+  margin: 0 auto;
+  padding: 12px;
+}
+
+.page .my-messages {
+  text-align: center;
+  display: inline-block;
+  margin: 0 auto;
 }
 
 .page .button-forms {
@@ -985,6 +996,18 @@ nav #nav-right-container #nav-inner-r #link a::selection {
     -webkit-transform: translateY(5px);
             transform: translateY(5px);
   }
+}
+
+.page .my-messages:hover {
+  -webkit-transform: translatey(3px);
+          transform: translatey(3px);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.page .my-messages:hover {
+  -webkit-animation: ani9 0.4s ease-in-out infinite alternate;
+          animation: ani9 0.4s ease-in-out infinite alternate;
 }
 
 .page .gallery {
